changed font color and fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(255, 235, 216);
+    overflow-x:clip;
 }
 .title {
     display: flex;
@@ -15,6 +16,7 @@
 .head {
     height: 100vh;
     width: 100vw;
+    padding: 50px 0px 40px 0px;
     text-decoration:none;
     color:rgb(255, 159, 70);
     text-align: center;
@@ -29,19 +31,21 @@ button {
     padding: 20px 30px 5px 0px;
     cursor:pointer;
 }
+button:hover{
+    color: rgb(230, 111, 0);
+}
 .scroll-top {
     position:sticky;
     top:0;
-    z-index:1000;
     padding-bottom:0px;
 }
 .scroll-top button {
     background: none;
     text-decoration:none;
-    padding-right:10px 30px;
 }
 .scroll-top button:hover {
     cursor:n-resize;
+    color:rgb(230, 111, 0);
 }
 .scroll-top h2{
     
@@ -81,28 +85,31 @@ h4, .link-head a{
 .refs a, .refs h4 {
     font-size: 18px;
     padding: 0px 75px 0px 75px;
-    color:rgb(255, 149, 49);
+    color:rgb(148, 116, 86);
 }
-.refs a {
-    padding-bottom:50px;
+.refs a:hover {
+    color:rgb(255, 123, 0);
 }
 p{
     font-size: 20px;
     padding: 0px 75px 0px 75px;
-    color:rgb(255, 149, 49);
+    color:rgb(148, 116, 86);
 }
-#contact p{
-    color:rgb(255, 149, 49);
-    padding-bottom: 10px;
+#contact p {
+    color:rgb(148, 116, 86);
     font-size: 18px;
+}
+#contact {
+    padding-top: 100px;
+    padding-bottom: 40px;
 }
 h5 {
     font-size: 18px;
-    color:rgb(255, 123, 0);
+    color:rgb(148, 116, 86);
     padding: 100px 75px 0px 75px;
 }
 #education {
-    color:rgb(255, 149, 49);
+    color:rgb(148, 116, 86);
 }
 .education-entry {
     padding: 0px 75px 0px 75px;
@@ -112,7 +119,7 @@ h5 {
     font-size:20px;
 }
 .left {
-    color:rgb(255, 123, 0);
+    color:rgb(148, 116, 86);
 }
 .left, .right {
     flex:1;
